<resources>
    <string name="app_name">HW5.2.2</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="register">Register</string>
    <string name="action_sign_in">Login</string>
    <string name="saveCheck">Хранить логин во внешнем хранилище</string>
    <string name="error">Error login or password</string>
    <string name="RegDone">register done!</string>
</resources>
